feat: add todo date and todo priority fields.

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: "Rubik", serif;
 }
