--- a/src/components/css/Checkbox.module.css
+++ b/src/components/css/Checkbox.module.css
@@ -2,3 +2,8 @@
   --tw-scale-x: 1;
   --tw-scale-y: 1;
 }
+
+.checkboxInput:focus-visible + .checkboxChecker {
+  --tw-scale-x: 0.6;
+  --tw-scale-y: 0.6;
+}
