style: minor style changes.

--- a/src/landing-page/css/index.module.css
+++ b/src/landing-page/css/index.module.css
@@ -1,4 +1,4 @@
-.wavesbackground {
+.mountainBackground {
   background-image: url(../../assets/layered-peaks-haikei.svg);
   background-attachment: fixed;
   background-size: cover;
